# Harness_TripleS

./: .gitignore  CLAUDE.md  README.md  idea.md  pyproject.toml  transcript.md
900_persistence/: assumptions.md  constraints.md  decisions.md  lessons.md  progress.md  tasks.md
905_guideline/: principles.md
scripts/: chat.py  chat_delegacion.py  chat_delegacion_sdk.py  probar_agent_sdk.py  probar_provider.py  probar_repl.py  probar_sesion_sdk.py  probar_sesion_starter.py
src/soda/: __init__.py  cli.py  repl.py  start.py
src/soda/agents/: __init__.py  memory.py  memory_tool.py  sesion_starter.py
src/soda/agents/prompts/: __init__.py  sesion_starter.md
src/soda/core/: __init__.py  flota.py  git.py  provider.py  sesion.py
src/soda/providers/: __init__.py  claude_cli.py  claude_sdk.py
src/soda/templates/: __init__.py  gitignore-base.txt
src/soda/templates/_guideline/: agents-and-evaluation.md  methodology.md  principles.md
src/soda/templates/_persistence/: .gitkeep  constraints.md  lessons.md  progress.md
tests/: test_claude_sdk.py  test_cli.py  test_flota.py  test_memoria.py  test_memory.py  test_memory_tool.py  test_provider.py  test_repl.py  test_sesion.py  test_sesion_starter.py  test_smoke.py  test_start.py  test_templates.py
