[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soda"
version = "0.1.0"
description = "Software Development Agentic — arnés de IA que orquesta agentes mediante CLIs de suscripción"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "jdrodriguez1000" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Solo para los spikes de exploración (scripts/), no para el producto. Valida
# el Camino B de la delegación: tool_use estructurado del Claude Agent SDK
# sobre suscripción (T-020, D-036). No se promueve a dependencia dura hasta
# que el spike confirme que funciona.
spike = ["claude-agent-sdk"]

[project.scripts]
soda = "soda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soda"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
