[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soda"
version = "0.1.0"
description = "Software Development Agentic — arnés de IA que orquesta agentes mediante CLIs de suscripción"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "jdrodriguez1000" }]
# El Agent SDK es dependencia dura desde T-021: `soda` es un orquestador REPL
# persistente sobre suscripción (D-035/D-036), construido sobre `ClaudeSDKClient`.
# `anyio` se declara aparte porque `soda.cli` lo importa directo para la frontera
# sync→async del REPL (T-022): hoy lo arrastra el Agent SDK, pero depender de eso
# es frágil —si el SDK dejara de usarlo, `soda` se rompería—, así que se fija aquí.
dependencies = ["claude-agent-sdk", "anyio"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
soda = "soda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soda"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
